--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+:root {
+    --sky: #42bff5;
+    --light-gray: #d3d9db;
+    --dark-gray: #787c7d;
+    --orange: #ffb74a;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    margin: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template: 150px 1fr / 150px 1fr
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    display: grid;
+    grid-template: 1fr / 40% 1fr;
+    place-items: center;
+    grid-row: 1;
+    grid-column: 2;
+    background-color: var(--sky);
 }
 
-.App-link {
-  color: #61dafb;
+.greeting {
+    display: grid;
+    grid-template: 1fr / 75px 1fr;
+    place-items: center;
+    gap: 10px;
+    grid-column: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pfp-container {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    display: grid;
+    grid-template: 1fr / 1fr;
+    place-items: center;
+    grid-column: 1;
+    background-color: var(--orange);
+}
+
+.contained-img {
+    width: 70%;
+}
+
+.title {
+    grid-column: 2;
+}
+
+.content {
+    grid-row: 2;
+    grid-column: 2;
+    background-color: var(--light-gray);
+}
+
+.cards-container {
+    margin: 25px;
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.card {
+    width: 400px;
+    height: 225px;
+    border-radius: 10px;
+    border-top: 8px solid var(--sky);
+    background-color: white;
+}
+
+.cardIcon {
+    width: 75px;
+}
+
+.cardName {
+    margin-left: 25px;
 }
