--- a/client/src/auth.module.css
+++ b/client/src/auth.module.css
@@ -55,19 +55,31 @@ form {
 
 .form-container {
     margin: 15px;
+    display: grid;
+    grid-template: 1fr 1fr 1fr 50px 30px / 1fr 1fr;
 }
 
-.field-container {
-    display: flex;
-    gap: 25px;
+.form-title {
+    margin: 0px; 
+    grid-row: 1;
+    grid-column: 1 / 3;
 }
 
 .submit-btn {
     border: none;
-    padding: 5px;
+    padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
     background-color: var(--sky);
     cursor: pointer;
+    grid-row: 4;
+    grid-column: 1;
+    justify-self: left;
+    align-self: center;
+}
+
+.auth-redirect {
+    grid-row: 5;
+    grid-column: 1 / 3;
 }
